Move to dataclass based storage classes
This required some rearchitecting of some of the nodes, but in particular made SeriesNodes much nicer

--- a/notebooks/tinybase/TinyJob.ipynb
+++ b/notebooks/tinybase/TinyJob.ipynb
@@ -1054,6 +1054,213 @@
    "source": [
     "pr.job_table()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "1fd1d8fa-14e1-4ece-9046-a4b4b3dc67b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": {
+       "MODULE": "'pyiron_contrib.tinybase.job'",
+       "NAME": "'TinyJob'",
+       "VERSION": "'0.1.0'",
+       "output": {
+        "MODULE": "'pyiron_contrib.tinybase.container'",
+        "NAME": "'MDOutput'",
+        "VERSION": "'0.1.0'",
+        "forces": "array([[[-2.30535051e-16,  3.43108906e-16,  8.18606310e-16],\n        [ 3.92914867e-15,  4.07037956e-15,  3.97855441e-15],\n        [-7.48500654e-15, -9.96284218e-15, -1.79533377e-15],\n        ...,\n        [ 5.01855502e-15,  2.71484224e-15,  3.48679419e-15],\n        [-8.04217803e-15, -9.15240106e-15, -7.19563298e-15],\n        [ 8.88872309e-15,  9.54271384e-15,  8.00054467e-15]],\n\n       [[-2.30535051e-16,  3.43108906e-16,  8.18606310e-16],\n        [ 3.92914867e-15,  4.07037956e-15,  3.97855441e-15],\n        [-7.48500654e-15, -9.96284218e-15, -1.79533377e-15],\n        ...,\n        [ 5.01855502e-15,  2.71484224e-15,  3.48679419e-15],\n        [-8.04217803e-15, -9.15240106e-15, -7.19563298e-15],\n        [ 8.88872309e-15,  9.54271384e-15,  8.00054467e-15]],\n\n       [[-2.62343424e+00,  2.33470784e+00, -2.75674956e-01],\n        [ 1.34300409e-01, -3.71159924e+00,  3.24313170e+00],\n        [ 2.28837018e+00,  1.95906120e+00, -6.41849344e-01],\n        ...,\n        [-3.02141357e+00, -1.11760933e+00, -7.86318321e-02],\n        [ 4.37108693e-01, -2.10195959e+00,  2.52954445e+00],\n        [ 1.73525765e+00, -2.15149182e-01, -4.66258900e+00]],\n\n       ...,\n\n       [[-1.61309469e+00,  2.40173133e+00,  8.60005712e-01],\n        [ 1.01627163e+00, -2.04876021e+00, -2.69841159e+00],\n        [-9.63580772e-01, -1.30314575e+00,  1.54826711e+00],\n        ...,\n        [ 2.33622011e+00,  1.42458080e+00, -8.55704425e-01],\n        [-6.21417936e-01, -2.75845670e+00,  7.99085620e-01],\n        [ 6.07076042e-03,  1.96134732e+00, -1.09215293e+00]],\n\n       [[ 3.78152342e+00, -2.83734650e-01,  5.78468269e-01],\n        [-2.62359615e+00, -5.18478229e-03,  9.99962596e-01],\n        [-2.44758733e+00,  1.06464273e+00, -1.20864327e+00],\n        ...,\n        [-1.43161830e+00,  8.65487360e-02,  1.17823380e+00],\n        [ 2.34453798e+00,  2.31271042e+00, -5.46357930e-01],\n        [-2.42503197e+00, -4.71949261e-01,  3.04565045e+00]],\n\n       [[-1.35294632e+00, -2.59425328e+00, -3.21526120e-01],\n        [ 1.21015573e-01,  3.62524895e+00,  2.13228164e+00],\n        [ 1.33292882e+00, -1.96341262e+00,  9.62968351e-01],\n        ...,\n        [ 1.99029559e+00, -2.09015234e+00, -1.81056408e+00],\n        [-4.45269875e-01,  9.81351247e-02, -6.07960535e-01],\n        [ 5.86512442e-01, -2.71503576e-01, -7.72907895e-01]]])",
+        "kin_energies": "array([2.18790726, 2.18790726, 1.0970859 , 1.62979581, 1.4684253 ,\n       1.37830557, 1.93724633, 1.26634897, 1.55280343, 1.62287952,\n       1.13141317, 1.61268185, 1.40292567, 1.69516696, 1.41598182,\n       1.40895748, 1.62565179, 1.03176305, 1.43441957, 1.1846772 ,\n       1.26321823, 1.53552591])",
+        "pot_energies": "array([-89.83944672, -89.83944672, -88.79068917, -89.32677211,\n       -89.19409937, -89.068648  , -89.63530583, -88.92931106,\n       -89.23369466, -89.31282598, -88.76200655, -89.26374679,\n       -89.02356514, -89.34006743, -89.07854473, -89.0420929 ,\n       -89.27307395, -88.64864703, -89.1008584 , -88.84143321,\n       -88.90896464, -89.16142015])",
+        "structures": "[Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...)]"
+       },
+       "task": {
+        "MODULE": "'pyiron_contrib.tinybase.ase'",
+        "NAME": "'AseMDTask'",
+        "VERSION": "'0.1.0'",
+        "input": {
+         "MODULE": "'pyiron_contrib.tinybase.ase'",
+         "NAME": "'AseMDInput'",
+         "VERSION": "'0.1.0'",
+         "calculator": "<ase.calculators.morse.MorsePotential object at 0x7fa0f7e86790>",
+         "output_steps": "20",
+         "steps": "100",
+         "structure": "Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4])",
+         "temperature": "600.0",
+         "timestep": "3.0"
+        }
+       }
+      },
+      "text/html": [
+       "<pre>DataContainer({\n",
+       "  \"NAME\": \"'TinyJob'\",\n",
+       "  \"MODULE\": \"'pyiron_contrib.tinybase.job'\",\n",
+       "  \"VERSION\": \"'0.1.0'\",\n",
+       "  \"task\": {\n",
+       "    \"NAME\": \"'AseMDTask'\",\n",
+       "    \"MODULE\": \"'pyiron_contrib.tinybase.ase'\",\n",
+       "    \"VERSION\": \"'0.1.0'\",\n",
+       "    \"input\": {\n",
+       "      \"NAME\": \"'AseMDInput'\",\n",
+       "      \"MODULE\": \"'pyiron_contrib.tinybase.ase'\",\n",
+       "      \"VERSION\": \"'0.1.0'\",\n",
+       "      \"steps\": \"100\",\n",
+       "      \"timestep\": \"3.0\",\n",
+       "      \"temperature\": \"600.0\",\n",
+       "      \"output_steps\": \"20\",\n",
+       "      \"structure\": \"Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4])\",\n",
+       "      \"calculator\": \"<ase.calculators.morse.MorsePotential object at 0x7fa0f7e86790>\"\n",
+       "    }\n",
+       "  },\n",
+       "  \"output\": {\n",
+       "    \"NAME\": \"'MDOutput'\",\n",
+       "    \"MODULE\": \"'pyiron_contrib.tinybase.container'\",\n",
+       "    \"VERSION\": \"'0.1.0'\",\n",
+       "    \"pot_energies\": \"array([-89.83944672, -89.83944672, -88.79068917, -89.32677211,\\n       -89.19409937, -89.068648  , -89.63530583, -88.92931106,\\n       -89.23369466, -89.31282598, -88.76200655, -89.26374679,\\n       -89.02356514, -89.34006743, -89.07854473, -89.0420929 ,\\n       -89.27307395, -88.64864703, -89.1008584 , -88.84143321,\\n       -88.90896464, -89.16142015])\",\n",
+       "    \"kin_energies\": \"array([2.18790726, 2.18790726, 1.0970859 , 1.62979581, 1.4684253 ,\\n       1.37830557, 1.93724633, 1.26634897, 1.55280343, 1.62287952,\\n       1.13141317, 1.61268185, 1.40292567, 1.69516696, 1.41598182,\\n       1.40895748, 1.62565179, 1.03176305, 1.43441957, 1.1846772 ,\\n       1.26321823, 1.53552591])\",\n",
+       "    \"forces\": \"array([[[-2.30535051e-16,  3.43108906e-16,  8.18606310e-16],\\n        [ 3.92914867e-15,  4.07037956e-15,  3.97855441e-15],\\n        [-7.48500654e-15, -9.96284218e-15, -1.79533377e-15],\\n        ...,\\n        [ 5.01855502e-15,  2.71484224e-15,  3.48679419e-15],\\n        [-8.04217803e-15, -9.15240106e-15, -7.19563298e-15],\\n        [ 8.88872309e-15,  9.54271384e-15,  8.00054467e-15]],\\n\\n       [[-2.30535051e-16,  3.43108906e-16,  8.18606310e-16],\\n        [ 3.92914867e-15,  4.07037956e-15,  3.97855441e-15],\\n        [-7.48500654e-15, -9.96284218e-15, -1.79533377e-15],\\n        ...,\\n        [ 5.01855502e-15,  2.71484224e-15,  3.48679419e-15],\\n        [-8.04217803e-15, -9.15240106e-15, -7.19563298e-15],\\n        [ 8.88872309e-15,  9.54271384e-15,  8.00054467e-15]],\\n\\n       [[-2.62343424e+00,  2.33470784e+00, -2.75674956e-01],\\n        [ 1.34300409e-01, -3.71159924e+00,  3.24313170e+00],\\n        [ 2.28837018e+00,  1.95906120e+00, -6.41849344e-01],\\n        ...,\\n        [-3.02141357e+00, -1.11760933e+00, -7.86318321e-02],\\n        [ 4.37108693e-01, -2.10195959e+00,  2.52954445e+00],\\n        [ 1.73525765e+00, -2.15149182e-01, -4.66258900e+00]],\\n\\n       ...,\\n\\n       [[-1.61309469e+00,  2.40173133e+00,  8.60005712e-01],\\n        [ 1.01627163e+00, -2.04876021e+00, -2.69841159e+00],\\n        [-9.63580772e-01, -1.30314575e+00,  1.54826711e+00],\\n        ...,\\n        [ 2.33622011e+00,  1.42458080e+00, -8.55704425e-01],\\n        [-6.21417936e-01, -2.75845670e+00,  7.99085620e-01],\\n        [ 6.07076042e-03,  1.96134732e+00, -1.09215293e+00]],\\n\\n       [[ 3.78152342e+00, -2.83734650e-01,  5.78468269e-01],\\n        [-2.62359615e+00, -5.18478229e-03,  9.99962596e-01],\\n        [-2.44758733e+00,  1.06464273e+00, -1.20864327e+00],\\n        ...,\\n        [-1.43161830e+00,  8.65487360e-02,  1.17823380e+00],\\n        [ 2.34453798e+00,  2.31271042e+00, -5.46357930e-01],\\n        [-2.42503197e+00, -4.71949261e-01,  3.04565045e+00]],\\n\\n       [[-1.35294632e+00, -2.59425328e+00, -3.21526120e-01],\\n        [ 1.21015573e-01,  3.62524895e+00,  2.13228164e+00],\\n        [ 1.33292882e+00, -1.96341262e+00,  9.62968351e-01],\\n        ...,\\n        [ 1.99029559e+00, -2.09015234e+00, -1.81056408e+00],\\n        [-4.45269875e-01,  9.81351247e-02, -6.07960535e-01],\\n        [ 5.86512442e-01, -2.71503576e-01, -7.72907895e-01]]])\",\n",
+       "    \"structures\": \"[Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...)]\"\n",
+       "  }\n",
+       "})</pre>"
+      ],
+      "text/plain": [
+       "DataContainer({'NAME': 'TinyJob', 'MODULE': 'pyiron_contrib.tinybase.job', 'VERSION': '0.1.0', 'task': DataContainer({'NAME': 'AseMDTask', 'MODULE': 'pyiron_contrib.tinybase.ase', 'VERSION': '0.1.0', 'input': DataContainer({'NAME': 'AseMDInput', 'MODULE': 'pyiron_contrib.tinybase.ase', 'VERSION': '0.1.0', 'steps': 100, 'timestep': 3.0, 'temperature': 600.0, 'output_steps': 20, 'structure': Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4]), 'calculator': <ase.calculators.morse.MorsePotential object at 0x7fa0f7e86790>})}), 'output': DataContainer({'NAME': 'MDOutput', 'MODULE': 'pyiron_contrib.tinybase.container', 'VERSION': '0.1.0', 'pot_energies': array([-89.83944672, -89.83944672, -88.79068917, -89.32677211,\n",
+       "       -89.19409937, -89.068648  , -89.63530583, -88.92931106,\n",
+       "       -89.23369466, -89.31282598, -88.76200655, -89.26374679,\n",
+       "       -89.02356514, -89.34006743, -89.07854473, -89.0420929 ,\n",
+       "       -89.27307395, -88.64864703, -89.1008584 , -88.84143321,\n",
+       "       -88.90896464, -89.16142015]), 'kin_energies': array([2.18790726, 2.18790726, 1.0970859 , 1.62979581, 1.4684253 ,\n",
+       "       1.37830557, 1.93724633, 1.26634897, 1.55280343, 1.62287952,\n",
+       "       1.13141317, 1.61268185, 1.40292567, 1.69516696, 1.41598182,\n",
+       "       1.40895748, 1.62565179, 1.03176305, 1.43441957, 1.1846772 ,\n",
+       "       1.26321823, 1.53552591]), 'forces': array([[[-2.30535051e-16,  3.43108906e-16,  8.18606310e-16],\n",
+       "        [ 3.92914867e-15,  4.07037956e-15,  3.97855441e-15],\n",
+       "        [-7.48500654e-15, -9.96284218e-15, -1.79533377e-15],\n",
+       "        ...,\n",
+       "        [ 5.01855502e-15,  2.71484224e-15,  3.48679419e-15],\n",
+       "        [-8.04217803e-15, -9.15240106e-15, -7.19563298e-15],\n",
+       "        [ 8.88872309e-15,  9.54271384e-15,  8.00054467e-15]],\n",
+       "\n",
+       "       [[-2.30535051e-16,  3.43108906e-16,  8.18606310e-16],\n",
+       "        [ 3.92914867e-15,  4.07037956e-15,  3.97855441e-15],\n",
+       "        [-7.48500654e-15, -9.96284218e-15, -1.79533377e-15],\n",
+       "        ...,\n",
+       "        [ 5.01855502e-15,  2.71484224e-15,  3.48679419e-15],\n",
+       "        [-8.04217803e-15, -9.15240106e-15, -7.19563298e-15],\n",
+       "        [ 8.88872309e-15,  9.54271384e-15,  8.00054467e-15]],\n",
+       "\n",
+       "       [[-2.62343424e+00,  2.33470784e+00, -2.75674956e-01],\n",
+       "        [ 1.34300409e-01, -3.71159924e+00,  3.24313170e+00],\n",
+       "        [ 2.28837018e+00,  1.95906120e+00, -6.41849344e-01],\n",
+       "        ...,\n",
+       "        [-3.02141357e+00, -1.11760933e+00, -7.86318321e-02],\n",
+       "        [ 4.37108693e-01, -2.10195959e+00,  2.52954445e+00],\n",
+       "        [ 1.73525765e+00, -2.15149182e-01, -4.66258900e+00]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-1.61309469e+00,  2.40173133e+00,  8.60005712e-01],\n",
+       "        [ 1.01627163e+00, -2.04876021e+00, -2.69841159e+00],\n",
+       "        [-9.63580772e-01, -1.30314575e+00,  1.54826711e+00],\n",
+       "        ...,\n",
+       "        [ 2.33622011e+00,  1.42458080e+00, -8.55704425e-01],\n",
+       "        [-6.21417936e-01, -2.75845670e+00,  7.99085620e-01],\n",
+       "        [ 6.07076042e-03,  1.96134732e+00, -1.09215293e+00]],\n",
+       "\n",
+       "       [[ 3.78152342e+00, -2.83734650e-01,  5.78468269e-01],\n",
+       "        [-2.62359615e+00, -5.18478229e-03,  9.99962596e-01],\n",
+       "        [-2.44758733e+00,  1.06464273e+00, -1.20864327e+00],\n",
+       "        ...,\n",
+       "        [-1.43161830e+00,  8.65487360e-02,  1.17823380e+00],\n",
+       "        [ 2.34453798e+00,  2.31271042e+00, -5.46357930e-01],\n",
+       "        [-2.42503197e+00, -4.71949261e-01,  3.04565045e+00]],\n",
+       "\n",
+       "       [[-1.35294632e+00, -2.59425328e+00, -3.21526120e-01],\n",
+       "        [ 1.21015573e-01,  3.62524895e+00,  2.13228164e+00],\n",
+       "        [ 1.33292882e+00, -1.96341262e+00,  9.62968351e-01],\n",
+       "        ...,\n",
+       "        [ 1.99029559e+00, -2.09015234e+00, -1.81056408e+00],\n",
+       "        [-4.45269875e-01,  9.81351247e-02, -6.07960535e-01],\n",
+       "        [ 5.86512442e-01, -2.71503576e-01, -7.72907895e-01]]]), 'structures': [Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...), Atoms(symbols='Fe16', pbc=True, cell=[2.4, 2.4, 2.4], momenta=...)]})})"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j.storage._cont"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6c7a623f-e281-4e70-901b-2cd7872872b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_project',\n",
+       " '_cont',\n",
+       " '_name',\n",
+       " '__module__',\n",
+       " '__doc__',\n",
+       " '__init__',\n",
+       " '__getitem__',\n",
+       " '_set',\n",
+       " 'create_group',\n",
+       " 'list_nodes',\n",
+       " 'list_groups',\n",
+       " 'project',\n",
+       " 'name',\n",
+       " '__abstractmethods__',\n",
+       " '_abc_impl',\n",
+       " 'get',\n",
+       " '__setitem__',\n",
+       " 'open',\n",
+       " 'close',\n",
+       " '__enter__',\n",
+       " '__exit__',\n",
+       " 'to_object',\n",
+       " '__dict__',\n",
+       " '__weakref__',\n",
+       " '__slots__',\n",
+       " '__new__',\n",
+       " '__repr__',\n",
+       " '__hash__',\n",
+       " '__str__',\n",
+       " '__getattribute__',\n",
+       " '__setattr__',\n",
+       " '__delattr__',\n",
+       " '__lt__',\n",
+       " '__le__',\n",
+       " '__eq__',\n",
+       " '__ne__',\n",
+       " '__gt__',\n",
+       " '__ge__',\n",
+       " '__reduce_ex__',\n",
+       " '__reduce__',\n",
+       " '__getstate__',\n",
+       " '__subclasshook__',\n",
+       " '__init_subclass__',\n",
+       " '__format__',\n",
+       " '__sizeof__',\n",
+       " '__dir__',\n",
+       " '__class__']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j.storage.__dir__()"
+   ]
   }
  ],
  "metadata": {
