--- a/notebooks/tinybase/ASE.ipynb
+++ b/notebooks/tinybase/ASE.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pympipool import PoolExecutor"
+    "from pympipool import Executor"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process = FuturesSubmitter(PoolExecutor(4))"
+    "process = FuturesSubmitter(Executor(4))"
    ]
   },
   {
@@ -1275,7 +1275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
