Lighten the import of pyiron_contrib
In the main init, only pyiron_base is imported to update the JOB_CLASS_DICT.

--- a/notebooks/coscine_io.ipynb
+++ b/notebooks/coscine_io.ipynb
@@ -62,7 +62,8 @@
     }
    ],
    "source": [
-    "from pyiron import Project"
+    "from pyiron import Project\n",
+    "import pyiron_contrib.RDM"
    ]
   },
   {
