--- a/notebooks/tinybase/TinyJob.ipynb
+++ b/notebooks/tinybase/TinyJob.ipynb
@@ -20,12 +20,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ponder/science/phd/dev/contrib/pyiron_contrib/__init__.py:9: UserWarning: pyiron module not found, importing Project from pyiron_base\n",
+      "/home/poul/pyiron/contrib/pyiron_contrib/__init__.py:9: UserWarning: pyiron module not found, importing Project from pyiron_base\n",
       "  warnings.warn(\"pyiron module not found, importing Project from pyiron_base\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.48 s, sys: 980 ms, total: 2.46 s\n",
+      "Wall time: 1.47 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "from pyiron_contrib.tinybase.project import FilesystemProject, InMemoryProject, SingleHdfProject"
    ]
   },
@@ -105,7 +114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb89b4339644ff5a2e79ff8f8c3a94f",
+       "model_id": "71760bb018a94c31bbf2d9ee9add377e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyiron_contrib.tinybase.executor.ExecutionContext at 0x7f1cc2f5d010>"
+       "<pyiron_contrib.tinybase.executor.ExecutionContext at 0x7fbcbcb4bc50>"
       ]
      },
      "execution_count": 9,
@@ -204,7 +213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09f052769a8d47b9a1d34e8e32f2f92e",
+       "model_id": "7ba2d6e222434c8e8f0dd80cf8edbb90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,49 +296,49 @@
      "output_type": "stream",
      "text": [
       "       Step     Time          Energy         fmax\n",
-      "LBFGS:    0 09:50:49       11.288146      189.5231\n",
-      "LBFGS:    1 09:50:49        1.168671       43.6957\n",
-      "LBFGS:    2 09:50:49        0.860403       38.6924\n",
-      "LBFGS:    3 09:50:49        0.362400       30.3554\n",
-      "LBFGS:    4 09:50:49        0.004806       24.0865\n",
-      "LBFGS:    5 09:50:49       -0.267437       19.0615\n",
-      "LBFGS:    6 09:50:49       -0.471646       15.0628\n",
-      "LBFGS:    7 09:50:49       -0.623506       11.8810\n",
-      "LBFGS:    8 09:50:49       -0.735237        9.3518\n",
-      "LBFGS:    9 09:50:49       -0.816458        7.3435\n",
-      "LBFGS:   10 09:50:49       -0.874705        5.7512\n",
-      "LBFGS:   11 09:50:49       -0.915849        4.4909\n",
-      "LBFGS:   12 09:50:49       -0.944435        3.4955\n",
-      "LBFGS:   13 09:50:49       -0.963943        2.7113\n",
-      "LBFGS:   14 09:50:49       -0.977006        2.0956\n",
-      "LBFGS:   15 09:50:49       -0.985585        1.6137\n",
-      "LBFGS:   16 09:50:49       -0.991109        1.2382\n",
-      "LBFGS:   17 09:50:49       -0.994598        0.9468\n",
-      "LBFGS:   18 09:50:49       -0.996763        0.7216\n",
-      "LBFGS:   19 09:50:49       -0.998083        0.5484\n",
-      "LBFGS:   20 09:50:49       -0.998876        0.4157\n",
-      "LBFGS:   21 09:50:49       -0.999347        0.3144\n",
-      "LBFGS:   22 09:50:49       -0.999623        0.2374\n",
-      "LBFGS:   23 09:50:49       -0.999784        0.1790\n",
-      "LBFGS:   24 09:50:49       -0.999877        0.1348\n",
-      "LBFGS:   25 09:50:49       -0.999930        0.1014\n",
-      "LBFGS:   26 09:50:49       -0.999960        0.0762\n",
-      "LBFGS:   27 09:50:49       -0.999977        0.0573\n",
-      "LBFGS:   28 09:50:49       -0.999987        0.0430\n",
-      "LBFGS:   29 09:50:49       -0.999993        0.0323\n",
-      "LBFGS:   30 09:50:49       -0.999996        0.0242\n",
-      "LBFGS:   31 09:50:49       -0.999998        0.0182\n",
-      "LBFGS:   32 09:50:49       -0.999999        0.0136\n",
-      "LBFGS:   33 09:50:49       -0.999999        0.0102\n",
-      "LBFGS:   34 09:50:49       -1.000000        0.0077\n",
-      "LBFGS:   35 09:50:49       -1.000000        0.0058\n",
-      "LBFGS:   36 09:50:49       -1.000000        0.0043\n",
-      "LBFGS:   37 09:50:49       -1.000000        0.0032\n",
-      "LBFGS:   38 09:50:49       -1.000000        0.0024\n",
-      "LBFGS:   39 09:50:49       -1.000000        0.0018\n",
-      "LBFGS:   40 09:50:49       -1.000000        0.0014\n",
-      "LBFGS:   41 09:50:49       -1.000000        0.0010\n",
-      "LBFGS:   42 09:50:49       -1.000000        0.0008\n"
+      "LBFGS:    0 18:00:52       11.288146      189.5231\n",
+      "LBFGS:    1 18:00:52        1.168671       43.6957\n",
+      "LBFGS:    2 18:00:52        0.860403       38.6924\n",
+      "LBFGS:    3 18:00:52        0.362400       30.3554\n",
+      "LBFGS:    4 18:00:52        0.004806       24.0865\n",
+      "LBFGS:    5 18:00:52       -0.267437       19.0615\n",
+      "LBFGS:    6 18:00:52       -0.471646       15.0628\n",
+      "LBFGS:    7 18:00:52       -0.623506       11.8810\n",
+      "LBFGS:    8 18:00:52       -0.735237        9.3518\n",
+      "LBFGS:    9 18:00:52       -0.816458        7.3435\n",
+      "LBFGS:   10 18:00:52       -0.874705        5.7512\n",
+      "LBFGS:   11 18:00:52       -0.915849        4.4909\n",
+      "LBFGS:   12 18:00:52       -0.944435        3.4955\n",
+      "LBFGS:   13 18:00:53       -0.963943        2.7113\n",
+      "LBFGS:   14 18:00:53       -0.977006        2.0956\n",
+      "LBFGS:   15 18:00:53       -0.985585        1.6137\n",
+      "LBFGS:   16 18:00:53       -0.991109        1.2382\n",
+      "LBFGS:   17 18:00:53       -0.994598        0.9468\n",
+      "LBFGS:   18 18:00:53       -0.996763        0.7216\n",
+      "LBFGS:   19 18:00:53       -0.998083        0.5484\n",
+      "LBFGS:   20 18:00:53       -0.998876        0.4157\n",
+      "LBFGS:   21 18:00:53       -0.999347        0.3144\n",
+      "LBFGS:   22 18:00:53       -0.999623        0.2374\n",
+      "LBFGS:   23 18:00:53       -0.999784        0.1790\n",
+      "LBFGS:   24 18:00:53       -0.999877        0.1348\n",
+      "LBFGS:   25 18:00:53       -0.999930        0.1014\n",
+      "LBFGS:   26 18:00:53       -0.999960        0.0762\n",
+      "LBFGS:   27 18:00:53       -0.999977        0.0573\n",
+      "LBFGS:   28 18:00:53       -0.999987        0.0430\n",
+      "LBFGS:   29 18:00:53       -0.999993        0.0323\n",
+      "LBFGS:   30 18:00:53       -0.999996        0.0242\n",
+      "LBFGS:   31 18:00:53       -0.999998        0.0182\n",
+      "LBFGS:   32 18:00:53       -0.999999        0.0136\n",
+      "LBFGS:   33 18:00:53       -0.999999        0.0102\n",
+      "LBFGS:   34 18:00:53       -1.000000        0.0077\n",
+      "LBFGS:   35 18:00:53       -1.000000        0.0058\n",
+      "LBFGS:   36 18:00:53       -1.000000        0.0043\n",
+      "LBFGS:   37 18:00:53       -1.000000        0.0032\n",
+      "LBFGS:   38 18:00:53       -1.000000        0.0024\n",
+      "LBFGS:   39 18:00:53       -1.000000        0.0018\n",
+      "LBFGS:   40 18:00:53       -1.000000        0.0014\n",
+      "LBFGS:   41 18:00:53       -1.000000        0.0010\n",
+      "LBFGS:   42 18:00:53       -1.000000        0.0008\n"
      ]
     }
    ],
@@ -337,12 +346,36 @@
     "j.run(\n",
     "    submitter=pr.create.executor.process(4)\n",
     ")\n",
-    "j.wait()"
+    "j.wait()\n",
+    "#FIXME: small race condition, other cells below can fail if executed too quickly.\n",
+    "import time\n",
+    "time.sleep(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "f05faf5d-7586-4a10-b6ad-1f1723196eb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'finished'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "j.status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "7c16a615-0913-4880-9694-2c125285babc",
    "metadata": {
     "tags": []
@@ -419,7 +452,7 @@
        "1  AseMinimizeTask  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "59ea5510-b6ce-4317-90c3-4af77db3d59a",
    "metadata": {
     "tags": []
@@ -453,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "3fb09d42-f800-46ee-9919-83180863e1ee",
    "metadata": {
     "tags": []
@@ -462,7 +495,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31f516acb1274474912b5cce65d519db",
+       "model_id": "be766dcb9b574096a4f5eec1db05ac17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d32508b9-2854-4076-9109-08ede1b52dc2",
    "metadata": {
     "tags": []
@@ -501,7 +534,7 @@
        "       -1.        ])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "db691097-72c6-45a4-89b1-6ec16018c8b8",
    "metadata": {
     "tags": []
@@ -535,14 +568,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "23ce6822-b38b-41f3-9269-109dbb152ecf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4fc225ea610406eba0b3c60a819f3dd",
+       "model_id": "ac4af2962e3743f59a4aa681042b0271",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "654ce992-b73f-42e3-a32e-2e0dafa7c952",
    "metadata": {
     "tags": []
@@ -580,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "253237f0-b338-470c-bc54-3c7400a757b7",
    "metadata": {},
    "outputs": [],
@@ -591,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "c801093b-499e-48a7-8444-77602ed88a96",
    "metadata": {},
    "outputs": [],
@@ -601,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "1e30b36e-11e6-47d1-836e-cffea7b73cdd",
    "metadata": {},
    "outputs": [],
@@ -611,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "18b5305a-8950-44af-bc2e-c9734b059713",
    "metadata": {},
    "outputs": [
@@ -619,8 +652,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 721 ms, sys: 309 ms, total: 1.03 s\n",
-      "Wall time: 4.99 s\n"
+      "CPU times: user 2.53 s, sys: 1.1 s, total: 3.64 s\n",
+      "Wall time: 35.1 s\n"
      ]
     }
    ],
@@ -632,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "836bb2ec-4295-4a3c-b976-7a35d04aad36",
    "metadata": {},
    "outputs": [
@@ -671,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "c178c3a3-f86c-4e80-a041-719ef2193b11",
    "metadata": {},
    "outputs": [],
@@ -681,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "e4c1b466-1185-4664-8178-716068139f0c",
    "metadata": {
     "tags": []
@@ -703,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "b41e37f5-45e2-49c7-af75-4457c7b9dec5",
    "metadata": {},
    "outputs": [],
@@ -724,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "d5dc0078-ee70-45f3-8f0a-3dafa4b50ee4",
    "metadata": {},
    "outputs": [
@@ -734,7 +767,7 @@
        "{'groups': ['output', 'task'], 'nodes': ['MODULE', 'NAME', 'VERSION']}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "3cd9f120-9eb7-4f34-80cb-9477d492c4ae",
    "metadata": {},
    "outputs": [
@@ -755,7 +788,7 @@
        "{'groups': ['md_300', 'md_600', 'md_900'], 'nodes': []}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "d0621236-07c4-4843-99e0-4c460fc7fa89",
    "metadata": {},
    "outputs": [
@@ -775,13 +808,13 @@
      "output_type": "stream",
      "text": [
       "total 1.9M\n",
-      "drwxr-xr-x 5 ponder ponder 4.0K  8. Jan 09:51 .\n",
-      "drwxr-xr-x 6 ponder ponder 4.0K  8. Jan 09:50 ..\n",
-      "drwxr-xr-x 3 ponder ponder 4.0K  8. Jan 09:50 md_300\n",
-      "drwxr-xr-x 3 ponder ponder 4.0K  8. Jan 09:50 md_600\n",
-      "drwxr-xr-x 3 ponder ponder 4.0K  8. Jan 09:51 md_900\n",
-      "-rw-r--r-- 1 ponder ponder 1.8M  8. Jan 09:51 project.h5\n",
-      "-rw-r--r-- 1 ponder ponder  20K  8. Jan 09:51 pyiron.db\n"
+      "drwxr-xr-x 5 poul poul 4.0K Jan 26 18:02 .\n",
+      "drwxr-xr-x 7 poul poul 4.0K Jan 26 18:02 ..\n",
+      "drwxr-xr-x 3 poul poul 4.0K Jan 26 18:01 md_300\n",
+      "drwxr-xr-x 3 poul poul 4.0K Jan 26 18:01 md_600\n",
+      "drwxr-xr-x 3 poul poul 4.0K Jan 26 18:02 md_900\n",
+      "-rw-r--r-- 1 poul poul 1.8M Jan 26 18:02 project.h5\n",
+      "-rw-r--r-- 1 poul poul  20K Jan 26 18:02 pyiron.db\n"
      ]
     }
    ],
@@ -799,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "79a2bb61-0a5e-4a3a-b195-46d027738a0e",
    "metadata": {},
    "outputs": [],
@@ -809,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "b4e6e0c9-a2c6-40ab-884e-a46e16c37b04",
    "metadata": {},
    "outputs": [
@@ -847,7 +880,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "cef7c46f-551f-401e-96c2-214628e23967",
    "metadata": {},
    "outputs": [
@@ -886,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "e8a7ee30-d7a6-46fc-bf98-1b52c981470f",
    "metadata": {},
    "outputs": [
@@ -947,7 +980,7 @@
        "0  MurnaghanTask  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "30871447-3e20-46ee-a58e-853d4f4cb5d9",
    "metadata": {},
    "outputs": [],
@@ -976,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "e63d43c1-341f-4ec0-b0cf-9cd5ead51926",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1084,7 @@
        "1      AseMDTask  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,17 +1103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "80da39e2-76d1-42e6-977f-241d2683188d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyiron_contrib.tinybase.executor.ExecutionContext at 0x7f1cf574ae10>"
+       "<pyiron_contrib.tinybase.executor.ExecutionContext at 0x7fbcf1f3da50>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "a567f96a-cbb3-4d2d-95d1-6dcecee7ddb8",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1221,7 @@
        "2      AseMDTask  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
